--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,3 @@
-﻿################################################################################
-# Ten plik .gitignore został utworzony automatycznie przez Microsoft(R) Visual Studio.
-################################################################################
 
 *.vsidx
 *.exe
@@ -10,6 +7,8 @@
 /.vs/Porg-Bazy/v17/.wsuo
 /projekt/.vs/projekt/v17/.suo
 
+
+#ignorowanie folderow .vs bin i obj
 **/.vs/
 **/bin/
 **/obj/
